[package]
name = "limestack-connector"
version = "1.0.0"
description = "LimeStack Connector - Direct hardware access for LimeStack"
authors = ["LimeStack"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
printers = "2"
open = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1
